# kamiru_mxm_scans_helper

./: GUIA_DE_USO.md  app.py  build_exe.py  generador_hojas.py  procesador_scans.py  pyproject.toml  system_design_document.md
